tests/Support/override/classes/error/response/AbstractErrorPage.php
<?php

namespace Thirtybees\Core\Error\Response;

abstract class AbstractErrorPage extends AbstractErrorPageCore
{

}
